Fixes navbar logo positioning when collapsed

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -38,6 +38,8 @@ time, mark, audio, video {
 
 a.navbar-brand {
 	padding-top: 0;
+	position: absolute;
+	top: 0;
 }
 
 .top-buffer {
